<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.we.diagram.IntroActivity"
    android:padding="@dimen/frame_large_padding">

    <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_diagram"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" />

    <TextView android:id="@+id/error"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textColor="@color/colorError"
              android:layout_marginBottom="@dimen/space"
              app:layout_constraintBottom_toTopOf="@+id/phone"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent" />

    <EditText
            android:id="@+id/phone"
            android:inputType="phone"
            android:hint="@string/phone_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/info"
            app:layout_constraintBottom_toBottomOf="parent" />

    <Button
            android:text="@string/next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next"
            android:layout_marginTop="@dimen/space"
            app:layout_constraintTop_toBottomOf="@+id/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

</android.support.constraint.ConstraintLayout>
